# Apps/StubCustodians/src/SUI.Custodians.API.Client/custodians-openapi-generated.json
@@ -547,95 +547,6 @@
           }
         }
       }
-    },
-    "/api/v1/Records/{providerSystemId}/{sui}": {
-      "get": {
-        "tags": [
-          "Records"
-        ],
-        "parameters": [
-          {
-            "name": "sui",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "additionalProperties": false
-            }
-          },
-          {
-            "name": "providerSystemId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "additionalProperties": false
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/RecordEnvelopeOfSuiRecord"
-                }
-              },
-              "application/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/RecordEnvelopeOfSuiRecord"
-                }
-              },
-              "text/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/RecordEnvelopeOfSuiRecord"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "text/plain; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "text/plain; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/FailureInfo"
-                }
-              },
-              "application/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/FailureInfo"
-                }
-              },
-              "text/json; x-api-version=1.0": {
-                "schema": {
-                  "$ref": "#/components/schemas/FailureInfo"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
